package pattern_examples.command_pattern_example;

public interface Command {
    void execute();
}
