@startuml

title __COMMAND_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.command_pattern_example {
    interface pattern_examples.command_pattern_example.Command {
        {abstract} + execute()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.Comp {
        ~ reset()
        ~ start()
        ~ stop()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.ResetComp {
        + ResetComp()
        + execute()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.StartComp {
        + StartComp()
        + execute()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.StopComp {
        + StopComp()
        + execute()
    }
  }
  

  namespace pattern_examples.command_pattern_example {
    class pattern_examples.command_pattern_example.User {
        + User()
        ~ resetComputer()
        ~ startComputer()
        ~ stopComputer()
    }
  }
  

  pattern_examples.command_pattern_example.ResetComp .up.|> pattern_examples.command_pattern_example.Command
  pattern_examples.command_pattern_example.ResetComp o-- pattern_examples.command_pattern_example.Comp : computer
  pattern_examples.command_pattern_example.StartComp .up.|> pattern_examples.command_pattern_example.Command
  pattern_examples.command_pattern_example.StartComp o-- pattern_examples.command_pattern_example.Comp : computer
  pattern_examples.command_pattern_example.StopComp .up.|> pattern_examples.command_pattern_example.Command
  pattern_examples.command_pattern_example.StopComp o-- pattern_examples.command_pattern_example.Comp : computer
  pattern_examples.command_pattern_example.User o-- pattern_examples.command_pattern_example.Command : reset
  pattern_examples.command_pattern_example.User o-- pattern_examples.command_pattern_example.Command : start
  pattern_examples.command_pattern_example.User o-- pattern_examples.command_pattern_example.Command : stop


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
